[gd_scene load_steps=8 format=2]

[ext_resource path="res://resources/ball.png" type="Texture" id=1]
[ext_resource path="res://demos/components/ShowAllDemos.tscn" type="PackedScene" id=2]
[ext_resource path="res://demos/Stagger.gd" type="Script" id=3]
[ext_resource path="res://demos/components/Label.tscn" type="PackedScene" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.768627, 0.768627, 0.768627, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.866667, 0.866667, 0.854902, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.219608, 0.219608, 0.219608, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.866667, 0.866667, 0.854902, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.866667, 0.866667, 0.854902, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="Stagger" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ball" type="Sprite" parent="."]
position = Vector2( 109.5, 108.5 )
scale = Vector2( 0.766667, 0.766667 )
texture = ExtResource( 1 )

[node name="Node" type="Node" parent="."]

[node name="ShowAllDemos" parent="." instance=ExtResource( 2 )]

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 0.918
anchor_right = 1.0
anchor_bottom = 0.918
margin_bottom = 40.0
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="First" type="Button" parent="HBoxContainer"]
margin_left = 279.0
margin_right = 421.0
margin_bottom = 32.0
rect_min_size = Vector2( 142, 32 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_colors/font_color = Color( 0.160784, 0.160784, 0.160784, 1 )
custom_colors/font_color_hover = Color( 0.0588235, 0.0588235, 0.0588235, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "First"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Center" type="Button" parent="HBoxContainer"]
margin_left = 441.0
margin_right = 583.0
margin_bottom = 32.0
rect_min_size = Vector2( 142, 32 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_colors/font_color = Color( 0.160784, 0.160784, 0.160784, 1 )
custom_colors/font_color_hover = Color( 0.0588235, 0.0588235, 0.0588235, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Center"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Last" type="Button" parent="HBoxContainer"]
margin_left = 603.0
margin_right = 745.0
margin_bottom = 32.0
rect_min_size = Vector2( 142, 32 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_colors/font_color = Color( 0.160784, 0.160784, 0.160784, 1 )
custom_colors/font_color_hover = Color( 0.0588235, 0.0588235, 0.0588235, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "Last"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Label" parent="." instance=ExtResource( 4 )]
text = "Group sequence demo"

[connection signal="pressed" from="HBoxContainer/First" to="." method="_on_First_pressed"]
[connection signal="pressed" from="HBoxContainer/Center" to="." method="_on_Center_pressed"]
[connection signal="pressed" from="HBoxContainer/Last" to="." method="_on_Last_pressed"]
